<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/tNombre"
        android:layout_width="197dp"
        android:layout_height="70dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="92dp"
        android:hint="@string/introduce_tu_nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tApellidos"
        android:layout_width="207dp"
        android:layout_height="80dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="180dp"
        android:hint="@string/introduce_tus_apellidos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tNacimiento"
        android:layout_width="271dp"
        android:layout_height="79dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="280dp"
        android:hint="@string/introduce_tu_fecha_de_nacimiento"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tDireccion"
        android:layout_width="239dp"
        android:layout_height="75dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="368dp"
        android:ems="10"
        android:hint="@string/introduce_tu_direcci_n"
        android:inputType="textPostalAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tTelefono"
        android:layout_width="230dp"
        android:layout_height="62dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="464dp"
        android:ems="10"
        android:hint="@string/introduce_tu_telefono"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="308dp"
        android:layout_marginBottom="16dp"
        android:text="@string/aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginBottom="16dp"
        android:text="@string/limpiar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>